--- a/src/projects/detail/components/timeline/milestones/MilestoneTypeFinalDesigns/MilestoneTypeFinalDesigns.scss
+++ b/src/projects/detail/components/timeline/milestones/MilestoneTypeFinalDesigns/MilestoneTypeFinalDesigns.scss
@@ -106,12 +106,15 @@
     position: relative;
   }
   .action-bar {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: $base-unit;
+    padding-bottom: $base-unit;
     position: relative;
 
     button {
-      margin: 0px 5px;
+      margin: $base-unit;
     }
   }
 
